--- a/change.html
+++ b/change.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>--Russkiy--</h1>
+						<h1>Russkiy1337</h1>
 						<p>Hello my name is Sergey. I'm 13 years old and I really like playing games. Especially in: CS:GO, GTA 5, PUBG, if you want to play with me in these games, then add me as a friend and we will definitely play</p>
 						<nav>
 							<ul>
