--- a/change.html
+++ b/change.html
@@ -14,8 +14,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Russkiy1337</h1>
-						<p>Hello my name is Sergey. I'm 13 years old and I really like playing games. Especially in: CS:GO, GTA 5, PUBG, if you want to play with me in these games, then add me as a friend and we will definitely play</p>
+						<h1>--Russkiy--</h1>
+						<p>Hello my name is Sergey. And i from Russia I'm 13 years old and I really like playing games. Especially in: CS:GO, GTA 5, PUBG, if you want to play with me in these games, then add me as a friend and we will definitely play</p>
 						<nav>
 							<ul>
 								<li><a href="https://steamcommunity.com/id/Ximinnex/" class="icon fa-Steam"><span class="label">Steam</span></a></li>
